<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="austin_d.a100daysofcodetracker.FirstTimeSetup_Activity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp" android:id="@+id/eTxtStartDate"
        android:paddingTop="5dp" android:paddingBottom="5dp"
        android:background="#ccc"/>
    <TextView
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/lblStartDate"
        android:labelFor="@id/eTxtStartDate"
        android:layout_alignBottom="@+id/eTxtStartDate" android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:textColor="@color/colorAccent"/>
    <Button
        android:text="@string/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmitStartDate"
        android:layout_marginTop="12dp" android:layout_below="@+id/eTxtStartDate"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:text="@string/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignParentTop="true"
        android:textSize="32sp"
        android:layout_centerHorizontal="true" android:layout_marginTop="25dp"/>
</RelativeLayout>
